--- a/setitup_main.css
+++ b/setitup_main.css
@@ -86,6 +86,41 @@ body {
 	margin: 0px;
 }
 
+#logo-file {
+	display: flex;
+	margin-top: 10px;
+	margin-left: 19%;
+	margin-right: auto;
+	width: auto;
+	height: 50px;
+	align-items: center;
+}
+
+.login-formContainerOuter {
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 100px;
+}
+
+.login-table {
+	display: table;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	font-size: 120%;
+}
+
+#login-header {
+	font-size: 180%;
+	padding-bottom: 15px;
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
 #logo {
 	display: flex;
 	margin-top: 1%;
